--- a/src/app/Components/table-client/table-client.component.html
+++ b/src/app/Components/table-client/table-client.component.html
@@ -1,14 +1,14 @@
 <div class="flex justify-center" style="max-height: 90vh;">
   <div class=" container p-6 overflow-scroll px-0">
     <div class="flex justify-between items-center">
-      <h1 class="text-2xl font-sans font-bold text-blue-gray-900">Agents</h1>
-      <button (click)="addAgent()" class="p-4 bg-blue-500 text-white rounded-md">Add Agent</button>
+      <h1 class="text-2xl font-sans font-bold text-blue-gray-900">Clients</h1>
+      <button (click)="addClient()" class="p-4 bg-blue-500 text-white rounded-md">Add Client</button>
     </div>
     <table class="mt-4 w-full min-w-max table-auto text-left">
       <thead>
       <tr>
         <th class="cursor-pointer border-y border-blue-gray-100 bg-blue-gray-50/50 p-4 transition-colors hover:bg-blue-gray-50">
-          <p class="antialiased font-sans text-sm text-blue-gray-900 flex items-center justify-between gap-2 font-normal leading-none opacity-70">Agent</p>
+          <p class="antialiased font-sans text-sm text-blue-gray-900 flex items-center justify-between gap-2 font-normal leading-none opacity-70">Client</p>
         </th>
         <th class="cursor-pointer border-y border-blue-gray-100 bg-blue-gray-50/50 p-4 transition-colors hover:bg-blue-gray-50">
           <p class="antialiased font-sans text-sm text-blue-gray-900 flex items-center justify-between gap-2 font-normal leading-none opacity-70">Verified</p>
@@ -19,50 +19,50 @@
       </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let agent of agents">
-          <td class="p-4 border-b border-blue-gray-50">
-            <div class="flex items-center gap-3">
-                <img src="./assets/ProMegaEnergie.png" alt="John Michael" class="inline-block relative object-cover object-center !rounded-full w-9 h-9 rounded-md">
-              <div class="flex flex-col">
-                <p class="block antialiased font-sans text-sm leading-normal text-blue-gray-900 font-normal">{{agent.nom}} {{agent.prenom}}</p>
-                <p class="block antialiased font-sans text-sm leading-normal text-blue-gray-900 font-normal opacity-70">{{agent.email}}</p>
-              </div>
+      <tr *ngFor="let client of clients">
+        <td class="p-4 border-b border-blue-gray-50">
+          <div class="flex items-center gap-3">
+            <img src="./assets/ProMegaEnergie.png" alt="John Michael" class="inline-block relative object-cover object-center !rounded-full w-9 h-9 rounded-md">
+            <div class="flex flex-col">
+              <p class="block antialiased font-sans text-sm leading-normal text-blue-gray-900 font-normal">{{client.nom}} {{client.prenom}}</p>
+              <p class="block antialiased font-sans text-sm leading-normal text-blue-gray-900 font-normal opacity-70">{{client.email}}</p>
             </div>
-          </td>
-          <td class="p-4 border-b border-blue-gray-50">
-            <div class="w-max">
-              <div *ngIf="agent.isVerifie" class="relative grid items-center font-sans font-bold uppercase whitespace-nowrap select-none bg-green-500/20 text-green-600 py-1 px-2 text-xs rounded-md" style="opacity: 1;">
-                <span class="">Verified</span>
-              </div>
-              <div *ngIf="!agent.isVerifie" class="relative grid items-center font-sans font-bold uppercase whitespace-nowrap select-none bg-red-500/20 text-red-700 py-1 px-2 text-xs rounded-md" style="opacity: 1;">
-                <span>Not Verified</span>
-              </div>
+          </div>
+        </td>
+        <td class="p-4 border-b border-blue-gray-50">
+          <div class="w-max">
+            <div *ngIf="client.isVerifie" class="relative grid items-center font-sans font-bold uppercase whitespace-nowrap select-none bg-green-500/20 text-green-600 py-1 px-2 text-xs rounded-md" style="opacity: 1;">
+              <span class="">Verified</span>
             </div>
-          </td>
-          <td class="p-4 border-b border-blue-gray-50">
-            <button (click)="editAgent(agent)" class="relative align-middle select-none font-sans font-medium text-center uppercase transition-all disabled:opacity-50 disabled:shadow-none disabled:pointer-events-none w-10 max-w-[40px] h-10 max-h-[40px] rounded-lg text-xs text-blue-gray-500 hover:bg-blue-gray-500/10 active:bg-blue-gray-500/30" type="button">
+            <div *ngIf="!client.isVerifie" class="relative grid items-center font-sans font-bold uppercase whitespace-nowrap select-none bg-red-500/20 text-red-700 py-1 px-2 text-xs rounded-md" style="opacity: 1;">
+              <span>Not Verified</span>
+            </div>
+          </div>
+        </td>
+        <td class="p-4 border-b border-blue-gray-50">
+          <button (click)="editClient(client)" class="relative align-middle select-none font-sans font-medium text-center uppercase transition-all disabled:opacity-50 disabled:shadow-none disabled:pointer-events-none w-10 max-w-[40px] h-10 max-h-[40px] rounded-lg text-xs text-blue-gray-500 hover:bg-blue-gray-500/10 active:bg-blue-gray-500/30" type="button">
               <span class="absolute top-1/2 left-1/2 transform -translate-y-1/2 -translate-x-1/2" title="edit">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true" class="h-4 w-4">
                   <path d="M21.731 2.269a2.625 2.625 0 00-3.712 0l-1.157 1.157 3.712 3.712 1.157-1.157a2.625 2.625 0 000-3.712zM19.513 8.199l-3.712-3.712-12.15 12.15a5.25 5.25 0 00-1.32 2.214l-.8 2.685a.75.75 0 00.933.933l2.685-.8a5.25 5.25 0 002.214-1.32L19.513 8.2z"></path>
                 </svg>
               </span>
-            </button>
-            <button (click)="deleteAgent(agent)" class="relative align-middle select-none font-sans font-medium text-center uppercase transition-all disabled:opacity-50 disabled:shadow-none disabled:pointer-events-none w-10 max-w-[40px] h-10 max-h-[40px] rounded-lg text-xs text-blue-gray-500 hover:bg-blue-gray-500/10 active:bg-blue-gray-500/30" type="button">
+          </button>
+          <button (click)="deleteClient(client)" class="relative align-middle select-none font-sans font-medium text-center uppercase transition-all disabled:opacity-50 disabled:shadow-none disabled:pointer-events-none w-10 max-w-[40px] h-10 max-h-[40px] rounded-lg text-xs text-blue-gray-500 hover:bg-blue-gray-500/10 active:bg-blue-gray-500/30" type="button">
               <span class="absolute top-1/2 left-1/2 transform -translate-y-1/2 -translate-x-1/2" title="delete">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true" class="h-4 w-4">
                   <path d="M3.5 6.5v13a1 1 0 001 1h14a1 1 0 001-1v-13h-16zm2 1h12v12h-12v-12zm5 3a1 1 0 011 1v6a1 1 0 01-2 0v-6a1 1 0 011-1zm4 0a1 1 0 011 1v6a1 1 0 01-2 0v-6a1 1 0 011-1z"></path>
                 </svg>
               </span>
-            </button>
-          </td>
-        </tr>
+          </button>
+        </td>
+      </tr>
       </tbody>
     </table>
   </div>
-  <div id="addAgent" style="display: none">
+  <div id="addClient" style="display: none">
     <span (click)="hideForm()"><button>X</button></span>
 
-    <form [formGroup]="formAddAgent">
+    <form [formGroup]="formAddClient">
       <div class="flex flex-col gap-4 p-6">
         <div class="flex flex-col gap-2">
           <label for="nomAdd" class="text-sm font-sans font-normal text-blue-gray-900">Nom</label>
@@ -81,15 +81,15 @@
           <input type="password" formControlName="password" id="passwordAdd" name="password"  class="p-4 border border-blue-gray-200 rounded-md">
         </div>
         <div class="flex flex-col gap-2">
-          <button (click)="AddSaveAgent()" type="submit" class="p-4 bg-blue-500 text-white rounded-md">Save</button>
+          <button (click)="AddSaveClient()" type="submit" class="p-4 bg-blue-500 text-white rounded-md">Save</button>
         </div>
       </div>
     </form>
   </div>
-  <div id="editeAgent" style="display: none">
+  <div id="editeClient" style="display: none">
     <span (click)="hideForm()"><button>X</button></span>
 
-    <form [formGroup]="formEditAgent">
+    <form [formGroup]="formEditClient">
       <div class="flex flex-col gap-4 p-6">
         <input type="hidden" formControlName="id"  id="idEdit" name="id">
         <input type="hidden" formControlName="password" id="passwordEdit" name="password">
@@ -107,7 +107,7 @@
           <input type="email" formControlName="email" id="emailEdit" name="email" class="p-4 border border-blue-gray-200 rounded-md">
         </div>
         <div class="flex flex-col gap-2">
-          <button (click)="updateAgent()" type="submit" class="p-4 bg-blue-500 text-white rounded-md">Save</button>
+          <button (click)="updateClient()" type="submit" class="p-4 bg-blue-500 text-white rounded-md">Save</button>
         </div>
       </div>
     </form>
