finish societe's actor

--- a/src/app/Societe/stock-batterie/stock-batterie.component.html
+++ b/src/app/Societe/stock-batterie/stock-batterie.component.html
@@ -1,3 +1,3 @@
-<app-navbar-agent></app-navbar-agent>
+<app-navbar-societe></app-navbar-societe>
 <app-select-batterie-or-voiture [choice1]="choice1" [choice2]="choice2" [choice3]="choice3" (selectChoices)="onChoiceSelected($event)"></app-select-batterie-or-voiture>
-<app-tabel-batterie [typeTable] = "RoleUser.Agent" [batteries]="batteries"></app-tabel-batterie>
+<app-tabel-batterie [typeTable] = "RoleUser.Societe" [batteries]="batteries"></app-tabel-batterie>
