--- a/src/app/Components/product-card/product-card.component.html
+++ b/src/app/Components/product-card/product-card.component.html
@@ -6,6 +6,7 @@
     <div class="w-2/3 p-4">
       <h1 class="text-gray-900 font-bold text-2xl">{{ nom }}</h1>
       <p class="mt-2 text-gray-600 text-sm">{{ vix }}</p>
+      <p class="mt-2 text-gray-600 text-sm">{{ nom2 }}</p>
       <div class="flex item-center justify-between mt-3">
         <h1 class="text-gray-700 font-bold text-xl">{{ prix }}DH</h1>
         <button (click)="buyProduct(product)" class="px-3 py-2 bg-gray-800 text-white text-xs font-bold uppercase rounded">Buy Product</button>
